--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # version: "3.8"
 services:
-  serviceB:
+  user-service:
     build: ./serviceB
     container_name: serviceB
     ports:
@@ -8,7 +8,7 @@ services:
     networks:
       - my-network
 
-  serviceA:
+  post-service:
     build: ./serviceA
     container_name: serviceA
     ports:
@@ -24,8 +24,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - serviceB
-      - serviceA
+      - user-service
+      - post-service
     networks:
       - my-network
 
